dshow: Use MTA and stop leaking thread context out of the module

Fix #16935